--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -19,7 +19,7 @@
       <view class="text-sm">CGM数据</view>
     </view>
     -->
-    <view class="padding-tb-sm text-center" bindtap="toUrl" data-url="{{authSuccess?'/pages/patient/list':''}}" data-msg="{{loginMsg}}">
+    <view class="padding-tb-sm text-center" bindtap="toUrl" wx:if="{{authSuccess}}" data-url="{{authSuccess?'/pages/patient/list':''}}" data-msg="{{loginMsg}}">
       <image src="/images/user.png" style="width: 60rpx;height: 60rpx;"></image>
       <view class="text-sm">患者管理</view>
     </view>
@@ -29,7 +29,7 @@
 <view class="cu-list menu">
   <view class="cu-item" wx:for="{{datas}}" wx:key="index">
     <view class="content" bindtap="toUrl" data-url="/pages/patient/detail?id={{item.patient.id}}">
-      <text class="cu-avatar round margin-right bg-gray text-white">Z</text>
+      <text class="cu-avatar round margin-right bg-gray text-white">{{item.first}}</text>
       <text class="">{{item.patient.name}}</text>
       <text class="cu-tag bg-yellow text-white margin-left-sm">{{typeArr[item.patient.assess.type]}}</text>
     </view>
@@ -60,4 +60,39 @@
       </view>
     </view>
   </view>
+</view>
+
+<view class="cu-modal show" wx:if="{{modalfollow}}">
+  <form bindsubmit="submit">
+    <input name="patientId" value="{{patient.id}}" hidden></input>
+    <view class="cu-dialog bg-white padding text-left">
+      <view class="cu-bar bg-white justify-end">
+					<view class="content">患者随访</view>
+					<view class="action" bindtap="modalStatus" data-name="follow">
+						<text class="cuIcon-close text-red"></text>
+					</view>
+				</view>
+      <view class="cu-bar margin-top">        
+        <view class="action flex-wrap">
+          <text class="margin-right margin-top-xs">患者标签</text>
+          <view class="cu-tag bg-main margin-top-xs">{{typeArr[patient.assess.type||2]}}</view>
+          <view class="cu-tag bg-yellow text-white margin-top-xs">{{patient.assess.time||0}}年</view>
+          <view class="cu-tag bg-red margin-top-xs" wx:if="{{patient.assess.smoke==0}}">{{patient.assess.smoke==0?'吸烟':'不吸烟'}}</view>
+          <view class="cu-tag bg-mauve margin-top-xs" wx:if="{{patient.assess.wine==0}}">{{patient.assess.wine==0?'喝酒':'不喝酒'}}</view>
+        </view>
+        <view class="action padding-right text-underline" bindtap="toUrl" data-url="/pages/patient/info?id={{patient.id}}">更多信息</view>
+      </view>
+      <view class="padding">
+        <view class="">随访需要询问的内容如下：</view>
+        <view class="margin-top-sm">
+          症状、体重、血压、用药情况、空腹和餐后血糖、自我管理情况等内容
+        </view>
+        <textarea name="content.msg" class="solid padding margin-top" style="min-height: 200rpx;width: 100%;" maxlength="-1" placeholder="如需记录随访信息,请在此输入"></textarea>
+      </view>
+      <view class="padding flex justify-between align-center bg-white">
+        <button style="width: 40%;" class="cu-btn bg-main lg" bindtap="call" data-phone="{{patient.phone}}">拨打电话</button>
+        <button style="width: 40%;" class="cu-btn bg-main lg" form-type="submit">确定</button>
+      </view>
+    </view>
+  </form>
 </view>
