--- a/pages/patient/statistics.wxml
+++ b/pages/patient/statistics.wxml
@@ -1,4 +1,4 @@
-<view class="flex text-center">
+<view class="flex text-center" bindtap="toUrl" data-url="/pages/patient/calendar?id={{options.id}}">
   <view class="flex-sub padding">
     <view class="text-main text-bold text-xxl">{{statisticsData.sumDay}}</view>
     <view class="">检测天数</view>
@@ -15,10 +15,6 @@
     <view class="text-main text-bold text-xxl">{{statisticsData.sumReport}}</view>
     <view class="">日报告</view>
   </view>
-  <view class="padding-right padding-top" bindtap="toUrl" data-url="/pages/patient/calendar?id={{options.id}}">
-    <view class="cuIcon-calendar text-main text-bold"></view>
-  </view>
-  
 </view>
 <view class="solid-top text-center padding-top">异常数据(次)</view>
 <view class="padding-sm flex text-center">
@@ -39,46 +35,42 @@
     <view class="text-black margin-top-sm text-sm">收缩压</view>
   </view>
 </view>
-<veiw class="flex solids-top padding">
-  <view class="cu-tag {{tabIndex==0?'bg-main':''}}" bindtap="tabChange" data-index="0">血糖</view>
-  <view class="cu-tag {{tabIndex==1?'bg-main':''}} " bindtap="tabChange" data-index="1">血压</view>
-</veiw>
-<canvas canvas-id="myChart" disable-scroll="true" class="canvas margin-top-xl padding-bottom"></canvas>
+<block wx:if="{{chartLine}}">
+  <veiw class="flex solids-top padding">
+    <view class="cu-tag {{tabIndex==0?'bg-main':''}}" bindtap="tabChange" data-index="0">血糖</view>
+    <view class="cu-tag {{tabIndex==1?'bg-main':''}} " bindtap="tabChange" data-index="1">血压</view>
+  </veiw>
+  <canvas canvas-id="myChart" disable-scroll="true" class="canvas margin-top-xl padding-bottom"></canvas>
+</block>
+
 
 <view class="tags">
   <view class="fr padding-right solid-right margin-right text-main text-bold">
-    <view class="tag" bindtap="footTab" data-index="0">
-      <view>随访记录</view>
-    </view>
-    <view class="tag" bindtap="footTab" data-index="1">
-      <view>日报告</view>
-    </view>
-
-    <view class="tag" bindtap="footTab" data-index="2">
-      <view>量表</view>
-    </view>
+    <view class="tag {{footIndex==index?'bg-main':''}}" bindtap="footTab" data-index="{{index}}" wx:key="index" wx:for="{{footTab}}">
+      <view class="text-df">{{item}}</view>
+    </view>    
   </view>
 </view>
 <view class=" safe-bottom" wx:if="{{footIndex==0}}">
   <view class="cu-list menu">
-  
-  <block wx:for="{{lists[0]}}" wx:key="index">
-    <view class="cu-item" bindtap="open" data-index="{{index}}">
-      <view class="content">
-        <text class="">随访时间</text>
+
+    <block wx:for="{{lists[0]}}" wx:key="index">
+      <view class="cu-item" bindtap="open" data-index="{{index}}">
+        <view class="content">
+          <text class="">随访时间</text>
+        </view>
+        <view class="action">
+          <text class="text-grey text-sm">{{item.createTime}}</text>
+        </view>
+        <view class="action">
+          <text class="{{open==index?'cuIcon-fold':'cuIcon-unfold'}} text-bold  text-grey margin-left-sm"></text>
+        </view>
       </view>
-      <view class="action">
-        <text class="text-grey text-sm">{{item.createTime}}</text>
+      <view class="bg-white padding text-content solid-bottom" wx:if="{{open==index}}">
+        {{item.content.msg||'无'}}
       </view>
-      <view class="action">
-        <text class="{{open==index?'cuIcon-fold':'cuIcon-unfold'}} text-bold  text-grey margin-left-sm"></text>
-      </view>
-    </view>
-    <view class="bg-white padding text-content solid-bottom" wx:if="{{open==index}}">
-      {{item.content.msg||'无'}}
-    </view>
-  </block>
-</view>
+    </block>
+  </view>
 </view>
 
 <view class=" safe-bottom" wx:if="{{footIndex==1}}">
