--- a/pages/patient/statistics.wxss
+++ b/pages/patient/statistics.wxss
@@ -17,8 +17,18 @@ page{
   border-color: var(--ghostWhite);
   transform: skewX(-45deg); 
 }
+
+.tag { 
+  display: inline-block;
+  border-width: 1rpx 0 0 1rpx;
+  border-style: solid;
+  padding:10rpx 0;
+  border-color: var(--ghostWhite);
+  transform: skewX(-45deg); 
+}
+
 .tag > view {
   padding:10rpx 30rpx; 
   transform: skewX(45deg);
-  font-size: 20rpx;
 }
+
