--- a/style/colorUI/main.wxss
+++ b/style/colorUI/main.wxss
@@ -13,14 +13,14 @@ page {
 	/* Color 可以自定义相关配色 */
 	/* var属性兼容性 --> https://www.caniuse.com/#feat=css-variables */
   /* 标准色 */
-  --main:#38C1F7;
+  --main:#41b592;
 	--red: #e54d42;
 	--orange: #f37b1d;
 	--yellow: #fbbd08;
 	--olive: #8dc63f;
 	--green: #39b54a;
 	--cyan: #1cbbb4;
-	--blue: #0081ff;
+	--blue: #3b9cfc;
 	--purple: #6739b6;
 	--mauve: #9c26b0;
 	--pink: #e03997;
