--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -19,7 +19,7 @@
       <view class="text-sm">CGM数据</view>
     </view>
     -->
-    <view class="padding-tb-sm text-center" bindtap="toUrl" wx:if="{{authSuccess}}" data-url="{{authSuccess?'/pages/diabetes/patient/list':''}}" data-msg="{{loginMsg}}">
+    <view class="padding-tb-sm text-center" bindtap="{{authSuccess?'toUrl':'modalStatus'}}" data-url="{{authSuccess?'/pages/diabetes/patient/list':''}}" data-msg="{{loginMsg}}" data-name="auth">
       <image src="/images/user.png" style="width: 60rpx;height: 60rpx;"></image>
       <view class="text-sm">患者管理</view>
     </view>
@@ -44,7 +44,7 @@
   <view class="text-gray text-sm">技术支持:清华大学精准医学研究院智慧健康中心</view>
 </view>
 
-<view class="cu-modal show" wx:if="{{authModal}}">
+<view class="cu-modal show" wx:if="{{modalauth}}">
   <view class="cu-dialog sm">
     <view class="cu-bar bg-white justify-end">
       <view class="content">授权提示</view>
@@ -55,7 +55,7 @@
     </view>
     <view class="cu-bar bg-white justify-end">
       <view class="action">
-        <button class="cu-btn line-gray text-gray" bindtap="hideModal">取消</button>
+        <button class="cu-btn line-gray text-gray" bindtap="modalStatus" data-name="auth">取消</button>
         <button class="cu-btn bg-main margin-left" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">确定</button>
       </view>
     </view>
